[package]
name = "rstdev-cache"
version = "0.1.3"
edition = "2021"
rust-version = "1.74" 
description = "A library to provide base cache abstraction layers to build cache engine"
license = "Apache-2.0"
keywords = ["libraries", "rstdev"]
categories = ["development-tools"]
documentation = "https://docs.rs/rstdev-cache"
repository = "https://github.com/rstlix0x0/rstdev/rstdev-cache"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rst-common = {version = "1.3", features = ["with-errors"]}
