[package]
name = "rstdev-config"
version = "0.1.2"
edition = "2021"
rust-version = "1.74" 
description = "A library to manage config from multiple source and formats"
license = "Apache-2.0"
keywords = ["libraries"]
categories = ["development-tools"]
documentation = "https://docs.rs/rst-common"
repository = "https://github.com/rstlix0x0/rstdev/rstdev-config"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rst-common = {version = "1.1", features = ["with-errors"]}
envy = {version = "0.4"}
toml = {version = "0.8"}
serde_yaml = {version = "0.9"}

[lib]
doctest = false